# PokerNowAgent-YC-BU-Hackathon2026

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_agent.py
config/: settings.py
src/: agent.py  browser.py  overlay.py  tools.py
src/captcha/: __init__.py  human.py  solver.py
src/strategy/: __init__.py  hand_evaluator.py  position.py  sng_strategy.py  tournament.py
tests/: test_hand_evaluator.py  test_position.py  test_settings.py  test_strategy.py  test_tournament.py
