[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokernow-agent"
version = "0.1.0"
description = "Autonomous Sit & Go poker agent for PokerNow using browser-use"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "browser-use>=0.1.40",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "UP007",  # X | Y union syntax -- keep for readability
]

[tool.ruff.lint.isort]
known-first-party = ["config", "src"]
